--- a/BehaviorSubjectPractice/src/app/app.component.html
+++ b/BehaviorSubjectPractice/src/app/app.component.html
@@ -7,6 +7,10 @@
     <div class="col-md-6">
       <app-greeting-message></app-greeting-message>
     </div>
+
+    <div class="col-md-6">
+      <app-another-component></app-another-component>
+    </div>
   </div>
 </div>
 
